--- a/Backend/Backend/appsettings.json
+++ b/Backend/Backend/appsettings.json
@@ -7,7 +7,8 @@
 	},
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
-		"DefaultDbConnection": "USER ID=postgres;Password=2105;Server=localhost;Port=5432;Database=logistic;Pooling=true"
+		"DefaultDbConnection": "USER ID=postgres;Password=2105;Server=localhost;Port=5432;Database=logistic;Pooling=true",
+		"DockerDbConnection": "HOST=logistic.database;Username=postgres;Password=2105;Port=5432;Database=logistic"
 	},
 	"Jwt": {
 		"Key": "E1A1D42F-5A8A-490E-973F-CA96593B8FD7"
