docker compose works

--- a/Backend/Backend/appsettings.json
+++ b/Backend/Backend/appsettings.json
@@ -8,9 +8,11 @@
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
 		"DefaultDbConnection": "USER ID=postgres;Password=2105;Server=localhost;Port=5432;Database=logistic;Pooling=true",
-		"DockerDbConnection": "HOST=logistic.database;Username=postgres;Password=2105;Port=5432;Database=logistic"
+		"DockerDbConnection": "HOST=logistic;Port=5432;Database=logisto;Username=postgres;Password=postgres;Include Error Detail=true"
 	},
+
 	"Jwt": {
 		"Key": "E1A1D42F-5A8A-490E-973F-CA96593B8FD7"
 	}
+
 }
