--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -6,24 +6,14 @@ services:
     build:
       context: .
       dockerfile: Backend/Dockerfile
-  logistic.database:
-   image: postgres:latest
-   container_name: logistic.database
-   environment:
-    - POSTGRES_DB=logistic
-    - POSTGRES_USER=postgres
-    - POSTGRES_PASSWORD=2105
-   volumes:
-    - ./.containers/logistic-db:/var/lib/postgresql/data 
-   ports:
-    - 5432:5432
-  
- 
+  database:
+    image: postgres:latest
+    container_name: logistic
+    environment:
+      - POSTGRES_DB=logisto
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - 5434:5432
 
-
-
-
-
-
-  
-  
+    
